--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "scrape-all": "tsx src/index.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.67.0",
     "@browserbasehq/stagehand": "^1.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "json2csv": "^5.0.7",
+    "openai": "^6.6.0",
     "stagehand": "^1.0.1",
     "zod": "^3.20.0"
   },
