--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
     "@browserbasehq/stagehand": "^1.0.0",
+    "@playwright/test": "^1.56.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "json2csv": "^5.0.7",
@@ -18,8 +19,15 @@
     "zod": "^3.20.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__template": "^7.4.4",
+    "@types/cookiejar": "^2.1.5",
+    "@types/graceful-fs": "^4.1.9",
+    "@types/http-errors": "^2.0.5",
+    "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
-    "tsx": "^3.12.7",
+    "@types/yargs": "^17.0.34",
+    "tsx": "^3.14.0",
     "typescript": "^5.0.0"
   }
 }
