--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "run-scraper": "tsx",
-    "scrape-all": "tsx src/index.ts"
+    "scrape-all": "tsx src/index.ts",
+    "setup:folders": "tsx setup_automotoras_folders.ts",
+    "list:folders": "tsx list_automotoras_structure.ts",
+    "setup:dev": "tsx watch setup_automotoras_folders.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
     "@browserbasehq/stagehand": "^1.0.0",
     "@playwright/test": "^1.56.1",
+    "csv-parse": "^5.5.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "json2csv": "^5.0.7",
@@ -26,6 +30,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
+    "@types/node": "^20.10.0",
     "@types/yargs": "^17.0.34",
     "tsx": "^3.14.0",
     "typescript": "^5.0.0"
