--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
-"compilerOptions": {
-"target": "ES2022",
-"module": "ESNext",
-"moduleResolution": "node",
-"esModuleInterop": true,
-"forceConsistentCasingInFileNames": true,
-"strict": true,
-"skipLibCheck": true,
-"outDir": "dist"
-},
-"include": ["src"]
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "lib": ["ES2022"],
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "declaration": true,
+    "sourceMap": true
+  },
+  "include": ["src", "*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
