--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "scrape-all": "tsx src/index.ts",
     "setup:folders": "tsx setup_automotoras_folders.ts",
     "list:folders": "tsx list_automotoras_folders.ts",
-    "setup:dev": "tsx watch setup_automotoras_folders.ts"
+    "setup:dev": "tsx watch setup_automotoras_folders.ts",
+    "dividir:csv": "tsx dividir_csv_por_automotora.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
     "@browserbasehq/stagehand": "^1.0.0",
     "@playwright/test": "^1.56.1",
     "csv-parse": "^5.5.3",
+    "csv-stringify": "^6.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "json2csv": "^5.0.7",
